[DOCUMENTATION] Use OpenApiValidator validateResponses option to validate the responses schema in swagger
